2008-01-26  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Bump version to 0.3.0

2007-12-24  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.ac (NAUTILUS_LIBS): 
	* src/Makefile.am (nautilus_extensiondir): 

	Get nautilus extension dir from nautilus-extension.pc

2007-12-22  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/pt_BR.po: Added Brazilian Portuguese translation by
	  Washington Lins <washington-lins@uol.com.br>

2007-12-21  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-12-21  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.2.1 release

2007-12-21  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/fi.po: Added Finnish translation by
	  Antti Sokero <antti.sokero@opinsys.fi>

2007-12-21  Jürg Billeter  <j@bitron.ch>

	* src/nautilus-image-rotator.c: (run_op): reset exif orientation to
	  avoid double image rotation

2007-09-26  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-09-26  Jürg Billeter  <j@bitron.ch>

	* po/POTFILES.in: use UTF-8 encoding

	* configure.ac: Bump version to 0.2.0

2007-09-26  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/sv.po: Added Swedish translation by
	  Daniel Nylander <info@danielnylander.se>

2007-09-26  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/es.po: Added Spanish translation by
	  Stephen Denham <stephen.denham@gmail.com>

2007-09-09  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/nl.po: Added Dutch translation by
	  Eddy Pronk <epronk@muftor.com>

2007-09-09  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/pl.po: Added Polish translation by
	  Piotr Szotkowski <shot@hot.pl>

2007-06-07  Jürg Billeter  <j@bitron.ch>

	* po/cs.po: Updated Czech translation by
	  Pavel Chovancik <pchovancik@foxinus.cz>

2007-05-13  Jürg Billeter  <j@bitron.ch>

	* po/fr.po: Updated French translation by
	  Julien Valroff <julien@kirya.net>

2007-04-11  Jürg Billeter  <j@bitron.ch>

	* po/LINGUAS, po/cs.po: Added Czech translation by