@@ -1,5 +1,11 @@
 2008-01-26  Jürg Billeter  <j@bitron.ch>
 
+	* configure.ac, src/nautilus-image-resizer.c,
+	  src/nautilus-image-rotator.c: port to GIO, requires glib 2.15 and
+	  nautilus 2.21, based on patch by Andrew Walton
+
+2008-01-26  Jürg Billeter  <j@bitron.ch>
+
 	* configure.ac: Bump version to 0.3.0
 
 2007-12-24  Brian Pepple  <bpepple@fedoraproject.org>
